--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
@@ -16,6 +17,7 @@
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
         "smalot/pdfparser": "^2.5",
+        "spatie/browsershot": "^5.0",
         "spatie/pdf-to-text": "^1.52",
         "tecnickcom/tcpdf": "^6.6"
     },
