Gambiarra no json

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,11 @@
             "php-http/discovery": true
         }
     },
+    "config2": {
+
+    },
+    
     "minimum-stability": "stable",
     "prefer-stable": true
+    
 }
