--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "smalot/pdfparser": "^2.5",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/pdf-to-text": "^1.52",
+        "stancl/tenancy": "^3.8",
         "tecnickcom/tcpdf": "^6.6",
         "thiagoalessio/tesseract_ocr": "^2.13"
     },
