--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livepixel/mercado-pago": "^1.0",
+        "mercadopago/dx-php": "3.0.8",
         "mikehaertl/php-pdftk": "^0.13.0",
         "nesbot/carbon": "^2.67",
         "realrashid/sweet-alert": "^7.0",
