--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.0",
+        "beyondcode/laravel-websockets": "^1.14",
         "google/cloud-vision": "^1.10",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -16,6 +17,7 @@
         "mercadopago/dx-php": "3.0.8",
         "mikehaertl/php-pdftk": "^0.13.0",
         "nesbot/carbon": "^2.67",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.0",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
