--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -1,38 +1,27 @@
 server {
     listen 80;
-    server_name webprosites.com.br;
-    return 301 https://$host$request_uri; # Redireciona todo o tráfego HTTP para HTTPS
-}
+    index index.php;
+    root /var/www/public;
 
-server {
-    listen 443 ssl;
-    server_name webprosites.com.br;
+    client_max_body_size 51g;
+    client_body_buffer_size 512k;
+    client_body_in_file_only clean;
 
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 
-
-    root /var/www/laravel/public; # Caminho para o diretório 'public' do Laravel
-    index index.php index.html index.htm;
-
-    # Configurações para Laravel
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
     }
 
-    # Configuração para processar PHP
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass 127.0.0.1:9000; # Ou o socket do PHP-FPM, ex.: unix:/var/run/php/php8.1-fpm.sock
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param X-Forwarded-Proto $scheme; # Informação do esquema para o Laravel
-        fastcgi_param X-Forwarded-Host $host;
-    }
-
-    # Configuração de segurança
-    location ~ /\.ht {
-        deny all;
-    }
-    
-    # Redirecionamento adequado
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_redirect http:// $scheme://;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
