--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livepixel/mercado-pago": "^1.0",
+        "mckenziearts/laravel-notify": "^2.6",
         "mercadopago/dx-php": "3.0.8",
         "mikehaertl/php-pdftk": "^0.13.0",
         "nesbot/carbon": "^2.67",
