--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,18 @@
         "erusev/parsedown": "^1.7",
         "google/cloud-vision": "^1.10",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/broadcasting": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livepixel/mercado-pago": "^1.0",
+        "livewire/livewire": "^3.6",
         "mckenziearts/laravel-notify": "^2.6",
         "mercadopago/dx-php": "3.0.8",
         "mikehaertl/php-pdftk": "^0.13.0",
         "nesbot/carbon": "^2.67",
         "pusher/pusher-php-server": "^7.2",
+        "react/http": "^1.8",
         "realrashid/sweet-alert": "^7.0",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
