--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "livewire": "^0.6.1",
         "postcss": "^8.5.2",
         "tailwindcss": "^3.4.17",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "jquery-toast-plugin": "^1.3.2",
-        "laravel-echo": "^1.17.1",
-        "pusher-js": "^8.4.0-rc2"
+        "laravel-echo": "^1.19.0",
+        "pusher-js": "^8.4.0"
     }
 }
