--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/broadcasting": "*",
         "laravel/framework": "^10.10",
+        "laravel/reverb": "^1.4",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livepixel/mercado-pago": "^1.0",
@@ -23,6 +24,7 @@
         "nesbot/carbon": "^2.67",
         "pusher/pusher-php-server": "^7.2",
         "react/http": "^1.8",
+        "react/promise": "2.8.0",
         "realrashid/sweet-alert": "^7.0",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
