--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.0",
-        "beyondcode/laravel-websockets": "^1.14",
+        "beyondcode/laravel-websockets": "*",
         "erusev/parsedown": "^1.7",
         "google/cloud-vision": "^1.10",
         "guzzlehttp/guzzle": "^7.2",
