--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "start": "node server.js"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
@@ -17,8 +18,21 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
         "jquery-toast-plugin": "^1.3.2",
         "laravel-echo": "^2.0.2",
-        "pusher-js": "^8.4.0"
-    }
+        "pusher-js": "^8.4.0",
+        "socket.io": "^4.8.1"
+    },
+    "name": "proconline",
+    "version": "1.0.0",
+    "description": "[Assine a Academy, e Seja VIP!](https://academy.especializati.com.br)",
+    "main": "postcss.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
