--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
+.docker-compose.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
@@ -22,6 +23,6 @@ yarn-error.log
 #VERIFICAR ARQUIVOS IGNORADOS
 #git ls-files -v | grep '^h'
 
-#REVERTER IGNORANCIA
+#REVERTER IGNORADOS
 #git update-index --no-assume-unchanged .docker-compose.yml
 #git update-index --no-assume-unchanged config/tenancy.php
