--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -3,7 +3,7 @@ server {
     index index.php;
     root /var/www/public;
 
-    client_max_body_size 51g;
+    client_max_body_size 20M;
     client_body_buffer_size 512k;
     client_body_in_file_only clean;
 
