--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@
 .env
 .env.backup
 .phpunit.result.cache
+# Docker
+docker-compose.yml
 docker-compose.override.yml
-.docker-compose.yml
+/.docker
+
 Homestead.json
 Homestead.yaml
 npm-debug.log
