--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -1,27 +1,39 @@
+# HTTP → HTTPS
 server {
     listen 80;
-    index index.php;
-    root /var/www/public;
+    server_name pixdesign.com.br www.pixdesign.com.br;
 
-    client_max_body_size 20M;
-    client_body_buffer_size 512k;
-    client_body_in_file_only clean;
-
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        allow all;
     }
 
     location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS
+server {
+    listen 443 ssl http2;
+    server_name pixdesign.com.br www.pixdesign.com.br;
+
+    ssl_certificate /etc/letsencrypt/live/pixdesign.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pixdesign.com.br/privkey.pem;
+
+    root /var/www/public;
+    index index.php index.html;
+
+    client_max_body_size 1024M;
+
+    location / {
         try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
     }
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass autocarro-app:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
+    }
 }
