--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ yarn-error.log
 /.idea
 /.vscode
 docker/nginx/laravel.conf
+.docker/nginx/laravel.conf
 #IGNORAR ARQUIVOS
 #git update-index --assume-unchanged .docker-compose.yml
 #git update-index --assume-unchanged config/tenancy.php
@@ -27,4 +28,5 @@ docker/nginx/laravel.conf
 #REVERTER IGNORADOS
 #git update-index --no-assume-unchanged .docker-compose.yml
 #git update-index --no-assume-unchanged config/tenancy.php
+docker/nginx/laravel.conf
 docker/nginx/laravel.conf
