--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ yarn-error.log
 /.vscode
 docker/nginx/laravel.conf
 .docker/nginx/laravel.conf
+docker/nginx/*.conf
+PRODUCAO-laravel.conf
+
 #IGNORAR ARQUIVOS
 #git update-index --assume-unchanged .docker-compose.yml
 #git update-index --assume-unchanged config/tenancy.php
