organizacao arquivos layuout

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/*
 /vendor
 .env
 .env.backup
@@ -21,6 +22,7 @@ docker/nginx/laravel.conf
 docker/nginx/*.conf
 PRODUCAO-laravel.conf
 LOCAL-laravel.conf
+
 #IGNORAR ARQUIVOS
 #git update-index --assume-unchanged .docker-compose.yml
 #git update-index --assume-unchanged config/tenancy.php
