--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "setasign/fpdi": "^2.6",
         "smalot/pdfparser": "^2.10",
         "spatie/laravel-medialibrary": "^11.0",
+        "spatie/pdf-to-image": "^1.2",
         "spatie/pdf-to-text": "^1.52",
         "symfony/css-selector": "^7.0",
         "symfony/dom-crawler": "^7.0",
